...
                                        </constraints>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uod-YU-pcC">
                                        <rect key="frame" x="256.66666666666669" y="144.33333333333331" width="171" height="37"/>
                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="20"/>
                                        <size key="titleShadowOffset" width="0.0" height="1"/>
                                        <state key="normal" title="Hit Me!" backgroundImage="Button-Normal">
                                            <color key="titleColor" red="0.37647058823529411" green="0.11764705882352941" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <color key="titleShadowColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <state key="highlighted" backgroundImage="Button-Highlighted"/>
                                        <connections>
                                            <action selector="hitMeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sOI-3N-HQf"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="31V-ma-h1z">
                                <rect key="frame" x="356" y="290" width="100" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="pxp-mZ-9mu"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                <state key="normal" title="Close" backgroundImage="Button-Normal">
                                    <color key="titleColor" red="0.37647058820000001" green="0.1176470588" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <state key="highlighted" backgroundImage="Button-Highlighted">
                                    <color key="titleColor" red="0.37647058820000001" green="0.1176470588" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
...
